--- a/Duelist/Duelist/GoogleService-Info.plist
+++ b/Duelist/Duelist/GoogleService-Info.plist
@@ -3,17 +3,17 @@
 <plist version="1.0">
 <dict>
 	<key>API_KEY</key>
-	<string>AIzaSyCoDiszj5dkC2HVTKAg3OKLAWVjpQ0kfbM</string>
+	<string>AIzaSyBeZRKXMA6DJkhYuJYXyRtv52d3SV6OXR8</string>
 	<key>GCM_SENDER_ID</key>
-	<string>219762638749</string>
+	<string>92558486630</string>
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
 	<string>VexingVulpes.Duelist</string>
 	<key>PROJECT_ID</key>
-	<string>duelist-db</string>
+	<string>duelist-db-a67c8</string>
 	<key>STORAGE_BUCKET</key>
-	<string>duelist-db.firebasestorage.app</string>
+	<string>duelist-db-a67c8.firebasestorage.app</string>
 	<key>IS_ADS_ENABLED</key>
 	<false></false>
 	<key>IS_ANALYTICS_ENABLED</key>
@@ -25,6 +25,6 @@
 	<key>IS_SIGNIN_ENABLED</key>
 	<true></true>
 	<key>GOOGLE_APP_ID</key>
-	<string>1:219762638749:ios:70f17928466fcf8927f974</string>
+	<string>1:92558486630:ios:025fc840fcb4d5283b51a7</string>
 </dict>
 </plist>
