--- a/Duelist/Duelist/Info.plist
+++ b/Duelist/Duelist/Info.plist
@@ -2,6 +2,10 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSBluetoothAlwaysUsageDescription</key>
+	<string>This app uses bluetooth to detect opponents</string>
+	<key>NSLocalNetworkUsageDescription</key>
+	<string>This app uses local network to detect opponents</string>
 	<key>NSBonjourServices</key>
 	<array>
 		<string>_duelist._tcp</string>
